<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.YC2010.Fotag.MainActivity">
    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_clear_all_white_24dp"
        android:title="@string/action_clear"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_star_1"
        android:icon="@drawable/ic_star_border_white_24dp"
        android:title="@string/action_star_1"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_star_2"
        android:icon="@drawable/ic_star_border_white_24dp"
        android:title="@string/action_star_2"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_star_3"
        android:icon="@drawable/ic_star_border_white_24dp"
        android:title="@string/action_star_3"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_star_4"
        android:icon="@drawable/ic_star_border_white_24dp"
        android:title="@string/action_star_4"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_star_5"
        android:icon="@drawable/ic_star_border_white_24dp"
        android:title="@string/action_star_5"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/action_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

</menu>
